src/components/ImageGrid/ImageGrid.module.css
.imageGrid {
  width: 100vw;
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  overflow: hidden;
}

.imageContainer {
  width: 24%;
  min-width: 10vw;
  height: 230px;
  margin: 5px 0;
  transition: all 0.5s ease;
}

.image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

@media only screen and (max-width: 1200px) {
  .imageContainer {
    width: 33%;
  }
}
@media only screen and (max-width: 768px) {
  .imageContainer {
    width: 47%;
  }
}
@media only screen and (max-width: 600px) {
  .imageGrid {
    flex-direction: column;
    align-content: center;
  }

  .imageContainer {
    width: 90%;
  }
}

